Add mongo commands to otel span attributes
See https://github.com/quarkusio/quarkus/issues/28473